# P-GPT

code/MT-Rag/P-GPT/: .gitattributes  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  chainlit.md  create_pregnancy_kb.py  pyproject.toml  requirements.txt  space.json  test_embeddings.py
code/MT-Rag/P-GPT/.huggingface/: DOCKER_CONFIG
code/MT-Rag/P-GPT/data/training/: embedding_training_data.jsonl
code/MT-Rag/P-GPT/evaluation/: rag_evaluation_data.csv  rag_evaluation_results.csv
code/MT-Rag/P-GPT/pregnancy_kb/: config.py  document_processor.py  prompts.py  utils.py  vector_store.py
